Build: Introduce TFM_CONFIG_USE_TRUSTZONE
Both CMake variable and C define.
Default to ON, set to OFF in appropriate platform configs.
Used to control inclusion of veneers, etc.

Change-Id: Ic1abb17fc6c5b8ac23b5dff09b52aef4946b6f94
Signed-off-by: Chris Brand <chris.brand@cypress.com>

--- a/platform/ext/common/gcc/tfm_isolation_l3.ld.template
+++ b/platform/ext/common/gcc/tfm_isolation_l3.ld.template
@@ -1,5 +1,7 @@
 ;/*
 ; * Copyright (c) 2009-2022 Arm Limited
+; * Copyright (c) 2022 Cypress Semiconductor Corporation (an Infineon company)
+; * or an affiliate of Cypress Semiconductor Corporation. All rights reserved.
 ; *
 ; * Licensed under the Apache License, Version 2.0 (the "License");
 ; * you may not use this file except in compliance with the License.
@@ -53,7 +55,7 @@ SECTIONS
         . = ALIGN(4);
     } > FLASH
 
-#ifndef TFM_MULTI_CORE_TOPOLOGY
+#ifdef TFM_CONFIG_USE_TRUSTZONE
     ASSERT(. <= ADDR(.TFM_VECTORS) + S_CODE_VECTOR_TABLE_SIZE, ".TFM_VECTORS section size overflow.")
     . = ADDR(.TFM_VECTORS) + S_CODE_VECTOR_TABLE_SIZE;
     /*
