Build: Set ns_agent partition flags
Remove defaults for CONFIG_TFM_USE_TRUSTZONE and
TFM_MULTI_CORE_TOPOLOGY.

Derive TFM_PARTITION_NS_AGENT_MAILBOX and TFM_PARTITION_NS_AGENT_TZ
from other configuration flags, and then use those flags where more
appropriate.

The goal is to open the path to other ns_agent configurations.

Change-Id: Ia866fd43d0cfbbaea0f70c9f9ee200644ce8bf9b
Signed-off-by: Chris Brand <chris.brand@cypress.com>

--- a/secure_fw/partitions/ns_agent_mailbox/CMakeLists.txt
+++ b/secure_fw/partitions/ns_agent_mailbox/CMakeLists.txt
@@ -7,7 +7,7 @@
 #
 #-------------------------------------------------------------------------------
 
-if (NOT TFM_MULTI_CORE_TOPOLOGY)
+if (NOT TFM_PARTITION_NS_AGENT_MAILBOX)
     return()
 endif()
 
