Attest: Introduce PSA 2.0.0 attestation profile
The attestation profile is evolving.
The original implementation is based on this version:
 - https://www.ietf.org/archive/id/draft-tschofenig-rats-psa-token-05.html
 - Profile name in the config: PSA_IOT_1

An updated version is available:
 - https://www.ietf.org/archive/id/draft-tschofenig-rats-psa-token-09.html
 - Profile name in the config: PSA_2_0_0

This change (and some follow-up) addresses the
differences between these and make the attestation
profile configurable. Currently, both profile is
supported. But in the long-term, the PSA_IOT_1 is
planned to be deprecated and then later removed.

Signed-off-by: Tamas Ban <tamas.ban@arm.com>
Change-Id: Iebe584f22e05fa60a324e0a13126440cb6f936d5

--- a/secure_fw/partitions/initial_attestation/CMakeLists.txt
+++ b/secure_fw/partitions/initial_attestation/CMakeLists.txt
@@ -74,6 +74,7 @@ target_compile_definitions(tfm_psa_rot_partition_attestation
         $<$<BOOL:${ATTEST_INCLUDE_OPTIONAL_CLAIMS}>:INCLUDE_OPTIONAL_CLAIMS>
         $<$<BOOL:${ATTEST_INCLUDE_COSE_KEY_ID}>:INCLUDE_COSE_KEY_ID>
         $<$<NOT:$<BOOL:${PLATFORM_DEFAULT_ATTEST_HAL}>>:CLAIM_VALUE_CHECK>
+        ATTEST_TOKEN_PROFILE_${ATTEST_TOKEN_PROFILE}
 )
 
 ########################### Attest defs ########################################
@@ -83,6 +84,11 @@ add_library(tfm_attestation_defs INTERFACE)
 target_include_directories(tfm_attestation_defs
     INTERFACE
         .
+)
+
+target_compile_definitions(tfm_attestation_defs
+    INTERFACE
+        ATTEST_TOKEN_PROFILE_${ATTEST_TOKEN_PROFILE}
 )
 
 ############################ Secure API ########################################
