--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -88,6 +88,7 @@ target_link_libraries(platform_s
         tfm_spm
         $<$<BOOL:${PLATFORM_DEFAULT_ATTEST_HAL}>:tfm_sprt>
         $<$<BOOL:${TFM_PARTITION_CRYPTO}>:crypto_service_mbedcrypto>
+        tfm_attestation_defs
 )
 
 target_compile_definitions(platform_s
