SPM: Only loads partition irqs when exist
In case of no irqs in all partitions, there is no need
to keep the partition irqs load logic code and irqs context
in partition load info.
This patch decrease 200 bytes code size.

Signed-off-by: Sherry Zhang <sherry.zhang2@arm.com>
Change-Id: I93f72fb180aac7035f51ed8af4700220d54feb85

--- a/secure_fw/spm/CMakeLists.txt
+++ b/secure_fw/spm/CMakeLists.txt
@@ -54,7 +54,7 @@ target_sources(tfm_spm
         $<$<BOOL:${TFM_PSA_API}>:ffm/psa_api.c>
         $<$<BOOL:${CONFIG_TFM_SPM_BACKEND_IPC}>:ffm/backend_ipc.c>
         $<$<BOOL:${CONFIG_TFM_SPM_BACKEND_SFN}>:ffm/backend_sfn.c>
-        $<$<BOOL:${TFM_PSA_API}>:ffm/interrupt.c>
+        $<$<OR:$<BOOL:${CONFIG_TFM_FLIH_API}>,$<BOOL:${CONFIG_TFM_SLIH_API}>>:ffm/interrupt.c>
         $<$<BOOL:${CONFIG_TFM_STACK_WATERMARKS}>:ffm/stack_watermark.c>
         $<$<BOOL:${TFM_PSA_API}>:cmsis_psa/tfm_core_svcalls_ipc.c>
         $<$<BOOL:${TFM_PSA_API}>:cmsis_psa/tfm_pools.c>
