RSS: Add CPAK generator tool
Allowing an implementation to generate the CPAK public key for a given
bl1_2 hash and GUK.

Change-Id: I1d74260c1d541197811589aba67be01b65b7988b
Signed-off-by: Raef Coles <raef.coles@arm.com>

--- a/bl1/bl1_1/CMakeLists.txt
+++ b/bl1/bl1_1/CMakeLists.txt
@@ -63,8 +63,8 @@ get_target_property(bin_dir bl1_2 RUNTIME_OUTPUT_DIRECTORY)
 
 add_custom_target(bl1_2_padded_bin
     ALL
-    SOURCES bl1_2_padded.bin
-    SOURCES bl1_2_padded_hash.bin
+    SOURCES bl1_2_padded.bin ${bin_dir}/bl1_2_padded.bin
+    SOURCES bl1_2_padded_hash.bin ${bin_dir}/bl1_2_padded_hash.bin
 )
 
 add_custom_command(OUTPUT bl1_2_padded.bin bl1_2_padded_hash.bin
