SPM: Introduce ns_agent partition flag
Add support for an optional boolean "ns_agent" in the manifest file,
which sets a partition flag.
Change IS_PARTITION_NS_AGENT to examine the flag.
Remove TFM_SP_NON_SECURE_ID.

Signed-off-by: Chris Brand <chris.brand@cypress.com>
Change-Id: Ia4b4d8d9a5b27f9baab28971b365fe5f35cd9694

--- a/tools/templates/partition_load_info.template
+++ b/tools/templates/partition_load_info.template
@@ -1,6 +1,8 @@
 /*
  * Copyright (c) 2021-2022, Arm Limited. All rights reserved.
- * Copyright (c) 2021, Cypress Semiconductor Corporation. All rights reserved.
+ * Copyright (c) 2021-2022 Cypress Semiconductor Corporation (an Infineon
+ * company) or an affiliate of Cypress Semiconductor Corporation. All rights
+ * reserved.
  *
  * SPDX-License-Identifier: BSD-3-Clause
  *
@@ -111,6 +113,9 @@ const struct partition_{{manifest.name|lower}}_load_info_t {{manifest.name|lower
 {% endif %}
 {% if manifest.type == "PSA-ROT" %}
                                     | PARTITION_MODEL_PSA_ROT
+{% endif %}
+{% if manifest.ns_agent is sameas true %}
+                                    | PARTITION_NS_AGENT
 {% endif %}
                                     | PARTITION_PRI_{{manifest.priority}},
         .entry                      = ENTRY_TO_POSITION({{manifest.entry}}),
