Attest: Fix undefined profile error when disabled
Also fix an undefined link error, also when the partition is disabled.

Change-Id: I871c1d0876e382f9d796d756ef329e38b1a701c1
Signed-off-by: Raef Coles <raef.coles@arm.com>

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -87,7 +87,7 @@ target_link_libraries(platform_s
         tfm_partition_defs
         $<$<BOOL:${PLATFORM_DEFAULT_ATTEST_HAL}>:tfm_sprt>
         $<$<BOOL:${TFM_PARTITION_CRYPTO}>:crypto_service_mbedcrypto>
-        tfm_attestation_defs
+        $<$<BOOL:${TFM_PARTITION_INITIAL_ATTESTATION}>:tfm_attestation_defs>
 )
 
 target_compile_definitions(platform_s
