Partitions: Enable configurable stack size
Change-Id: If8bc86aa7904879b69260f48e8fc2292fe25c013
Signed-off-by: Kevin Peng <kevin.peng@arm.com>

--- a/secure_fw/partitions/crypto/CMakeLists.txt
+++ b/secure_fw/partitions/crypto/CMakeLists.txt
@@ -99,6 +99,7 @@ include(utils)
         CRYPTO_ENGINE_BUF_SIZE;
         CRYPTO_CONC_OPER_NUM;
         CRYPTO_IOVEC_BUFFER_SIZE;
+        CRYPTO_STACK_SIZE;
     "
     )
 
