--- a/secure_fw/partitions/protected_storage/tfm_protected_storage.yaml
+++ b/secure_fw/partitions/protected_storage/tfm_protected_storage.yaml
@@ -12,7 +12,7 @@
   "priority": "NORMAL",
   "model": "SFN",
   "entry_init": "tfm_ps_entry",
-  "stack_size": "0x700",
+  "stack_size": "PS_STACK_SIZE",
   "secure_functions": [
     {
       "name": "TFM_PS_SET",
