Build: Merge secure_api & sp_log_raw into tfm_sprt
This patch merges tfm_secure_api and tfm_sp_log_raw library
into tfm_sprt.
The APIs in tfm_secure_api and tfm_sp_log_raw are for Secure
Partitions usage thereforce they can naturally be moved to tfm_sprt
as tfm_sprt is intended for Secure Partition usages.

This patch also changes tfm_sprt to publicly link psa_interface.

With these changes, Secure Partition libraries need to link a single
tfm_sprt for all interactions with the framework.

This patch also removes some unnecessary links.

Change-Id: I99b1e3c6ae1e956435bcfdf5b0db77d9f6f2a3f3
Signed-off-by: Kevin Peng <kevin.peng@arm.com>

--- a/secure_fw/partitions/audit_logging/CMakeLists.txt
+++ b/secure_fw/partitions/audit_logging/CMakeLists.txt
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2020-2021, Arm Limited. All rights reserved.
+# Copyright (c) 2020-2022, Arm Limited. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -29,8 +29,7 @@ target_include_directories(tfm_psa_rot_partition_audit
 target_link_libraries(tfm_psa_rot_partition_audit
     PRIVATE
         platform_s
-        tfm_secure_api
-        psa_interface
+        tfm_sprt
 )
 
 ########################### Audit defs #########################################
