--- a/secure_fw/partitions/lib/runtime/CMakeLists.txt
+++ b/secure_fw/partitions/lib/runtime/CMakeLists.txt
@@ -26,16 +26,16 @@ target_sources(tfm_sprt
         $<$<BOOL:${CONFIG_TFM_PARTITION_META}>:./sprt_partition_metadata_indicator.c>
         $<$<BOOL:${CONFIG_TFM_PARTITION_META}>:./rt_main.c>
         $<$<BOOL:${CONFIG_TFM_SPM_BACKEND_IPC}>:./sfn_common_thread.c>
+        $<$<BOOL:${TFM_SP_LOG_RAW_ENABLED}>:./tfm_sp_log_raw.c>
+        $<$<BOOL:${TFM_SP_LOG_RAW_ENABLED}>:${CMAKE_SOURCE_DIR}/platform/ext/common/tfm_hal_sp_logdev_periph.c>
 )
 
 target_link_libraries(tfm_sprt
     PUBLIC
-        $<$<BOOL:${TFM_SP_LOG_RAW_ENABLED}>:tfm_sp_log_raw>
-    PRIVATE
-        platform_s
-        tfm_secure_api
         psa_interface
-        tfm_boot_status
+        tfm_spm_defs
+        tfm_partition_defs
+        platform_s
 )
 
 target_compile_definitions(tfm_partition_defs
@@ -48,37 +48,3 @@ target_include_directories(tfm_partitions
     INTERFACE
         $<BUILD_INTERFACE:$<$<BOOL:${CONFIG_TFM_PARTITION_META}>:${CMAKE_CURRENT_SOURCE_DIR}/include>>
 )
-
-# Create a dedicated tfm_sp_log_raw library for some regression test modules
-# which don't include tfm_sprt.
-# tfm_sp_log_raw shall be controlled by TFM_SP_LOG_RAW_ENABLED.
-# Otherwise, build will fail if TFM_SP_LOG_RAW_ENABLED is disabled since some
-# definitions are unavailable with TFM_SP_LOG_RAW_ENABLED disabled.
-if (TFM_SP_LOG_RAW_ENABLED)
-    add_library(tfm_sp_log_raw INTERFACE)
-
-    target_sources(tfm_sp_log_raw
-        INTERFACE
-            ${CMAKE_CURRENT_SOURCE_DIR}/tfm_sp_log_raw.c
-            ${CMAKE_SOURCE_DIR}/platform/ext/common/tfm_hal_sp_logdev_periph.c
-    )
-
-    target_include_directories(tfm_sp_log_raw
-        INTERFACE
-            $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-    )
-
-    target_link_libraries(tfm_sp_log_raw
-        INTERFACE
-            platform_s
-            psa_interface
-            tfm_secure_api
-    )
-
-    target_compile_definitions(tfm_sp_log_raw
-        INTERFACE
-            $<$<BOOL:${TFM_PSA_API}>:TFM_PSA_API>
-            TFM_PARTITION_LOG_LEVEL=${TFM_PARTITION_LOG_LEVEL}
-            TFM_SP_LOG_RAW_ENABLED
-    )
-endif()
