Build: Keep idle partition enabled on multi-core platforms
On multi-core platforms, the secure core can enter low-power state in
idle partition while no active execution is running.
TF-M may halt on multi-core platforms without the idle partition, if
SLIH or FLIH is not implemented.

Change-Id: I3a2cb8bf29aaa917dea01f2eca3b8e17cd8ba34c
Signed-off-by: David Hu <david.hu@arm.com>

--- a/secure_fw/partitions/idle_partition/CMakeLists.txt
+++ b/secure_fw/partitions/idle_partition/CMakeLists.txt
@@ -6,7 +6,8 @@
 #
 #-------------------------------------------------------------------------------
 
-if (NOT CONFIG_TFM_FLIH_API AND NOT CONFIG_TFM_SLIH_API)
+if (NOT CONFIG_TFM_FLIH_API AND NOT CONFIG_TFM_SLIH_API AND
+    NOT TFM_MULTI_CORE_TOPOLOGY)
     return()
 endif()
 
