Fix: Add FP compile option for platform_crypto_keys
Fix the build error comes from a new library in platform.

Signed-off-by: Jianliang Shen <jianliang.shen@arm.com>
Change-Id: I24b5be85550dbd4c80f358b0849d3697786cc751

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -150,6 +150,11 @@ if(TFM_PARTITION_CRYPTO)
         PRIVATE
             $<$<BOOL:${SYMMETRIC_INITIAL_ATTESTATION}>:SYMMETRIC_INITIAL_ATTESTATION>
     )
+
+    target_compile_options(platform_crypto_keys
+        PUBLIC
+            ${COMPILER_CP_FLAG}
+    )
 endif()
 
 #========================= Platform BL2 =======================================#
