--- a/tools/tfm_generated_file_list.yaml
+++ b/tools/tfm_generated_file_list.yaml
@@ -1,5 +1,7 @@
 #-------------------------------------------------------------------------------
 # Copyright (c) 2018-2022, Arm Limited. All rights reserved.
+# Copyright (c) 2022 Cypress Semiconductor Corporation (an Infineon company)
+# or an affiliate of Cypress Semiconductor Corporation. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -17,49 +19,41 @@
   "file_list": [
     {
         "name": "Secure Partition declarations for library",
-        "short_name": "tfm_partition_list_lib",
         "template": "secure_fw/spm/cmsis_func/tfm_spm_db_func.inc.template",
         "output": "secure_fw/spm/cmsis_func/tfm_spm_db_func.inc"
     },
     {
         "name": "Secure Veneers C file",
-        "short_name": "tfm_veneers_c",
         "template": "secure_fw/spm/cmsis_func/tfm_veneers.c.template",
         "output": "secure_fw/spm/cmsis_func/tfm_veneers.c"
     },
     {
         "name": "Secure Veneers H file",
-        "short_name": "tfm_veneers_h",
         "template": "interface/include/tfm_veneers.h.template",
         "output": "interface/include/tfm_veneers.h"
     },
     {
         "name": "Secure IRQ handlers",
-        "short_name": "tfm_secure_irq_handlers",
         "template": "secure_fw/spm/cmsis_func/tfm_secure_irq_handlers.inc.template",
         "output": "secure_fw/spm/cmsis_func/tfm_secure_irq_handlers.inc"
     },
     {
         "name": "SID H file",
-        "short_name": "sid.h",
         "template": "interface/include/psa_manifest/sid.h.template",
         "output": "interface/include/psa_manifest/sid.h"
     },
     {
         "name": "PID H file",
-        "short_name": "pid.h",
         "template": "interface/include/psa_manifest/pid.h.template",
         "output": "interface/include/psa_manifest/pid.h"
     },
     {
         "name": "SPM config header",
-        "short_name": "config_impl.h",
         "template": "interface/include/config_impl.h.template",
         "output": "interface/include/config_impl.h"
     },
     {
         "name": "CMake variables generated",
-        "short_name": "config_impl.cmake",
         "template": "tools/config_impl.cmake.template",
         "output": "tools/config_impl.cmake"
     }
