--- a/platform/ext/common/gcc/tfm_isolation_l3.ld.template
+++ b/platform/ext/common/gcc/tfm_isolation_l3.ld.template
@@ -35,7 +35,7 @@ MEMORY
 #endif
 }
 
-__msp_init_stack_size__ = S_MSP_STACK_SIZE_INIT;
+__msp_stack_size__ = S_MSP_STACK_SIZE;
 
 /* Library configurations */
 GROUP(libgcc.a libc.a libm.a libnosys.a libc_nano.a)
@@ -271,7 +271,7 @@ SECTIONS
 
     .msp_stack : ALIGN(32)
     {
-        . += __msp_init_stack_size__;
+        . += __msp_stack_size__;
     } > RAM
     Image$$ARM_LIB_STACK$$ZI$$Base = ADDR(.msp_stack);
     Image$$ARM_LIB_STACK$$ZI$$Limit = ADDR(.msp_stack) + SIZEOF(.msp_stack);
