--- a/tools/tfm_generated_file_list.yaml
+++ b/tools/tfm_generated_file_list.yaml
@@ -12,48 +12,48 @@
 # Both can contain environment variables
 
 {
-  "name": "TF-M generated file list",
+  "description": "TF-M generated file list",
   "type": "generated_file_list",
   "version_major": 0,
   "version_minor": 1,
   "file_list": [
     {
-        "name": "Secure Partition declarations for library",
+        "description": "Secure Partition declarations for library",
         "template": "secure_fw/spm/cmsis_func/tfm_spm_db_func.inc.template",
         "output": "secure_fw/spm/cmsis_func/tfm_spm_db_func.inc"
     },
     {
-        "name": "Secure Veneers C file",
+        "description": "Secure Veneers C file",
         "template": "secure_fw/spm/cmsis_func/tfm_veneers.c.template",
         "output": "secure_fw/spm/cmsis_func/tfm_veneers.c"
     },
     {
-        "name": "Secure Veneers H file",
+        "description": "Secure Veneers H file",
         "template": "interface/include/tfm_veneers.h.template",
         "output": "interface/include/tfm_veneers.h"
     },
     {
-        "name": "Secure IRQ handlers",
+        "description": "Secure IRQ handlers",
         "template": "secure_fw/spm/cmsis_func/tfm_secure_irq_handlers.inc.template",
         "output": "secure_fw/spm/cmsis_func/tfm_secure_irq_handlers.inc"
     },
     {
-        "name": "SID H file",
+        "description": "SID H file",
         "template": "interface/include/psa_manifest/sid.h.template",
         "output": "interface/include/psa_manifest/sid.h"
     },
     {
-        "name": "PID H file",
+        "description": "PID H file",
         "template": "interface/include/psa_manifest/pid.h.template",
         "output": "interface/include/psa_manifest/pid.h"
     },
     {
-        "name": "SPM config header",
+        "description": "SPM config header",
         "template": "interface/include/config_impl.h.template",
         "output": "interface/include/config_impl.h"
     },
     {
-        "name": "CMake variables generated",
+        "description": "CMake variables generated",
         "template": "tools/config_impl.cmake.template",
         "output": "tools/config_impl.cmake"
     }
