--- a/tools/tfm_manifest_list.yaml
+++ b/tools/tfm_manifest_list.yaml
@@ -10,20 +10,20 @@
 # The "manifest" field must be relative path to this file or absolute path.
 #
 # Files per Secure Partition are generated to:
-#   - "output_path", if it is a absolute path - not recommanded
+#   - "output_path", if it is a absolute path - not recommended
 #   - generated_file_root/"output_path", if "output_path" is relative path
 #   - generated_file_root/, if "output_path" is not specified
 #       * generated_file_root is the path passed to tfm_parse_manifest_list.py
 #         by -o/--outdir
 
 {
-  "name": "TF-M secure partition manifests",
+  "description": "TF-M secure partition manifests",
   "type": "manifest_list",
   "version_major": 0,
   "version_minor": 1,
   "manifest_list": [
     {
-      "name": "Non-Secure Mailbox Agent",
+      "description": "Non-Secure Mailbox Agent",
       "manifest": "../secure_fw/partitions/ns_agent_mailbox/ns_agent_mailbox.yaml",
       "output_path": "secure_fw/partitions/ns_agent_mailbox",
       "conditional": "TFM_PARTITION_NS_AGENT_MAILBOX",
@@ -37,7 +37,7 @@
       }
     },
     {
-      "name": "Protected Storage Partition",
+      "description": "Protected Storage Partition",
       "manifest": "../secure_fw/partitions/protected_storage/tfm_protected_storage.yaml",
       "output_path": "secure_fw/partitions/protected_storage",
       "conditional": "TFM_PARTITION_PROTECTED_STORAGE",
@@ -51,7 +51,7 @@
       }
     },
     {
-      "name": "TF-M Internal Trusted Storage Partition",
+      "description": "TF-M Internal Trusted Storage Partition",
       "manifest": "../secure_fw/partitions/internal_trusted_storage/tfm_internal_trusted_storage.yaml",
       "output_path": "secure_fw/partitions/internal_trusted_storage",
       "conditional": "TFM_PARTITION_INTERNAL_TRUSTED_STORAGE",
@@ -65,7 +65,7 @@
       }
     },
     {
-      "name": "TFM Audit Log Partition",
+      "description": "TFM Audit Log Partition",
       "manifest": "../secure_fw/partitions/audit_logging/tfm_audit_logging.yaml",
       "output_path": "secure_fw/partitions/audit_logging",
       "conditional": "TFM_PARTITION_AUDIT_LOG",
@@ -79,7 +79,7 @@
       }
     },
     {
-      "name": "TFM Crypto Partition",
+      "description": "TFM Crypto Partition",
       "manifest": "../secure_fw/partitions/crypto/tfm_crypto.yaml",
       "output_path": "secure_fw/partitions/crypto",
       "conditional": "TFM_PARTITION_CRYPTO",
@@ -93,7 +93,7 @@
       }
     },
     {
-      "name": "TFM Platform Partition",
+      "description": "TFM Platform Partition",
       "manifest": "../secure_fw/partitions/platform/tfm_platform.yaml",
       "output_path": "secure_fw/partitions/platform",
       "conditional": "TFM_PARTITION_PLATFORM",
@@ -107,7 +107,7 @@
       }
     },
     {
-      "name": "TFM Initial Attestation Partition",
+      "description": "TFM Initial Attestation Partition",
       "manifest": "../secure_fw/partitions/initial_attestation/tfm_initial_attestation.yaml",
       "output_path": "secure_fw/partitions/initial_attestation",
       "conditional": "TFM_PARTITION_INITIAL_ATTESTATION",
@@ -121,7 +121,7 @@
       }
     },
     {
-      "name": "TF-M PSA Proxy Partition",
+      "description": "TF-M PSA Proxy Partition",
       "manifest": "../secure_fw/partitions/psa_proxy/tfm_psa_proxy.yaml",
       "output_path": "secure_fw/partitions/psa_proxy",
       "conditional": "TFM_PARTITION_PSA_PROXY",
@@ -135,7 +135,7 @@
       }
     },
     {
-      "name": "TFM Firmware Update Partition",
+      "description": "TFM Firmware Update Partition",
       "manifest": "../secure_fw/partitions/firmware_update/tfm_firmware_update.yaml",
       "output_path": "secure_fw/partitions/firmware_update",
       "conditional": "TFM_PARTITION_FIRMWARE_UPDATE",
